name:                dsl
version:             0.1.0.0
synopsis:            Synopsis
description:         DSL for my own language

homepage:            https://github.com/timfame/dsl/tree/main/dsl#readme
license:             MIT
license-file:        LICENSE
author:              Timofey Gribanov
maintainer:          timf4me@gmail.com
copyright:           2020 Timofey Gribanov

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     DSL, ToStr
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , deepseq
                     , random
                     , parallel
                     , stm
                     , vector
                     , hashable
                     , filepath
                     , directory
                     , microlens
                     , comonad
                     , ansi-terminal
                     , split
  default-language:    Haskell2010

